<?xml version="1.0"?>
<package format="2">
  <name>raw2compressed</name>
  <version>0.0.0</version>
  <description>The raw2compressed package</description>
  <maintainer email="zhl017@todo.todo">zhl017</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
</package>
